# control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.hpp  editorapplication.cpp  editorapplication.hpp  example_latex.cpp  graphics.hpp  main.cpp  main_editor.cpp  mainapplication.cpp  mainapplication.hpp  models.hpp
backup/: application_backup.cpp  application_backup.hpp  main_backup.cpp  mainapplication.hpp
